plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromActualAnnotation/jvm/jvm.kt
actual annotation class <!LINE_MARKER("descr='Has expects in common module'")!>Ann<!> actual constructor(
        actual val <!LINE_MARKER("descr='Has expects in common module'")!>x<!>: Int,
        actual val <!LINE_MARKER("descr='Has expects in common module'")!>y<!>: String
)
